rule-of-two-soft: Honour explicitly defaulted copy-ctor/operator

The user signaled he knows what he's doing and there's even valid
use cases

BUG: 443343